# yo-kernel

./: .clang_complete  README.md  meson.build  meson_options.txt
arch/: meson.build
arch/cortex_m/: isr.c  meson.build  nvic.c
arch/cortex_m/tm4c129e/: debug.c  irq.c  mempool.c  meson.build  sysclock.c
config/: config.h.in  meson.build
include/: endian.h  error.h  helper.h  type.h
include/arch/: port.h
include/arch/cortex_m/: irq.h  link.h  mpu.h  nvic.h  periph.h  reg.h
include/arch/cortex_m/tm4c129e/: gpio.h  irq.h  memory_map.h  sysclock.h  sysctl.h  uart.h  yo.ld
include/kernel/: init.h  memory.h  object.h
include/lib/: bitmap.h  stdio.h  string.h
kernel/: error.c  init.c  memory.c  meson.build
kernel/lib/: memcpy.c  memset.c  meson.build  stdio.c
toolchain/: cortex-m4f.txt
